prd/repro/alloy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"alloy","namespace":"ebpf-repro"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"alloy"}},"template":{"metadata":{"labels":{"app":"alloy"}},"spec":{"containers":[{"args":["run","/etc/alloy/config.alloy","--server.http.listen-addr=0.0.0.0:12345","--stability.level=generally-available"],"image":"grafana/alloy:v1.10.1","name":"alloy","ports":[{"containerPort":12345}],"resources":{"limits":{"memory":"256Mi" [...]
  name: alloy
  namespace: ebpf-repro
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: alloy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: alloy
    spec:
      containers:
      - args:
        - run
        - /etc/alloy/config.alloy
        - --server.http.listen-addr=0.0.0.0:12345
        - --stability.level=generally-available
        image: grafana/alloy:v1.10.1
        imagePullPolicy: IfNotPresent
        name: alloy
        ports:
        - containerPort: 12345
          protocol: TCP
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/alloy
          name: config
      dnsPolicy: ClusterFirst
      nodeSelector:
        eks.amazonaws.com/nodegroup: ebpf-repro-ng
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: alloy
      serviceAccountName: alloy
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: alloy-config
        name: config
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-11T05:52:22Z"
    lastUpdateTime: "2026-05-11T06:15:26Z"
    message: ReplicaSet "alloy-85d6c7d7d" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  - lastTransitionTime: "2026-05-12T00:05:59Z"
    lastUpdateTime: "2026-05-12T00:05:59Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
