prd/repro/dummy-logger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"dummy-logger","namespace":"ebpf-repro"},"spec":{"replicas":30,"selector":{"matchLabels":{"app":"dummy-logger"}},"template":{"metadata":{"labels":{"app":"dummy-logger"}},"spec":{"containers":[{"command":["/bin/sh","-c","i=0\nwhile true; do\n  echo \"{\\\"ts\\\":\\\"$(date -u +%Y-%m-%dT%H:%M:%SZ)\\\",\\\"level\\\":\\\"info\\\",\\\"msg\\\":\\\"dummy log line $i\\\",\\\"pod\\\":\\\"$HOSTNAME\\\",\\\"trace_id\\\":\ [...]
  name: dummy-logger
  namespace: ebpf-repro
spec:
  progressDeadlineSeconds: 600
  replicas: 30
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dummy-logger
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dummy-logger
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - |
          i=0
          while true; do
            echo "{\"ts\":\"$(date -u +%Y-%m-%dT%H:%M:%SZ)\",\"level\":\"info\",\"msg\":\"dummy log line $i\",\"pod\":\"$HOSTNAME\",\"trace_id\":\"$(cat /dev/urandom | tr -dc 'a-f0-9' | head -c 32)\"}"
            i=$((i+1))
            sleep 1
          done
        image: busybox:1.37
        imagePullPolicy: IfNotPresent
        name: logger
        resources:
          limits:
            memory: 16Mi
          requests:
            cpu: 5m
            memory: 8Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        eks.amazonaws.com/nodegroup: ebpf-repro-ng
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  availableReplicas: 30
  conditions:
  - lastTransitionTime: "2026-05-11T06:08:04Z"
    lastUpdateTime: "2026-05-11T06:08:09Z"
    message: ReplicaSet "dummy-logger-59b8b65885" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  - lastTransitionTime: "2026-05-12T00:06:27Z"
    lastUpdateTime: "2026-05-12T00:06:27Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  observedGeneration: 1
  readyReplicas: 30
  replicas: 30
  updatedReplicas: 30
