prd/repro/dummy-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"dummy-web","namespace":"ebpf-repro"},"spec":{"ports":[{"port":80,"targetPort":80}],"selector":{"app":"dummy-web"}}}
  name: dummy-web
  namespace: ebpf-repro
spec:
  - 172.20.104.72
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: dummy-web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
