prd/repro/dummy-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"dummy-web","namespace":"ebpf-repro"},"spec":{"replicas":50,"selector":{"matchLabels":{"app":"dummy-web"}},"template":{"metadata":{"annotations":{"prometheus.io/port":"80","prometheus.io/scrape":"true"},"labels":{"app":"dummy-web"}},"spec":{"containers":[{"image":"nginx:1.27-alpine","name":"nginx","ports":[{"containerPort":80}],"resources":{"limits":{"memory":"32Mi"},"requests":{"cpu":"10m","memory":"16Mi"}}}], [...]
  name: dummy-web
  namespace: ebpf-repro
spec:
  progressDeadlineSeconds: 600
  replicas: 50
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dummy-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: "80"
        prometheus.io/scrape: "true"
      labels:
        app: dummy-web
    spec:
      containers:
      - image: nginx:1.27-alpine
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            memory: 32Mi
          requests:
            cpu: 10m
            memory: 16Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        eks.amazonaws.com/nodegroup: ebpf-repro-ng
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  availableReplicas: 50
  conditions:
  - lastTransitionTime: "2026-05-11T06:08:02Z"
    lastUpdateTime: "2026-05-11T06:08:09Z"
    message: ReplicaSet "dummy-web-5c8d5ffffb" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  - lastTransitionTime: "2026-05-12T00:06:33Z"
    lastUpdateTime: "2026-05-12T00:06:33Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  observedGeneration: 1
  readyReplicas: 50
  replicas: 50
  updatedReplicas: 50
