prd/repro/loki-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"loki","namespace":"ebpf-repro"},"spec":{"ports":[{"port":3100,"targetPort":3100}],"selector":{"app":"loki"}}}
  name: loki
  namespace: ebpf-repro
spec:
  - 172.20.113.139
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3100
    protocol: TCP
    targetPort: 3100
  selector:
    app: loki
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
