prd/repro/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"loki","namespace":"ebpf-repro"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"loki"}},"template":{"metadata":{"labels":{"app":"loki"}},"spec":{"containers":[{"args":["-config.file=/etc/loki/loki.yaml"],"image":"grafana/loki:3.4.0","name":"loki","ports":[{"containerPort":3100}],"resources":{"limits":{"memory":"512Mi"},"requests":{"cpu":"100m","memory":"256Mi"}},"volumeMounts":[{"mountPath":"/etc/loki", [...]
  name: loki
  namespace: ebpf-repro
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: loki
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - args:
        - -config.file=/etc/loki/loki.yaml
        image: grafana/loki:3.4.0
        imagePullPolicy: IfNotPresent
        name: loki
        ports:
        - containerPort: 3100
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/loki
          name: config
        - mountPath: /loki
          name: data
      dnsPolicy: ClusterFirst
      nodeName: ip-10-1-26-238.ec2.internal
      nodeSelector:
        eks.amazonaws.com/nodegroup: ebpf-repro-ng
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: loki-config
        name: config
      - emptyDir: {}
        name: data
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-12T00:06:39Z"
    lastUpdateTime: "2026-05-12T00:06:39Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  - lastTransitionTime: "2026-05-11T05:51:53Z"
    lastUpdateTime: "2026-05-12T00:48:02Z"
    message: ReplicaSet "loki-74769b89b5" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
