prd/repro/mimir-distributor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mimir-distributor","namespace":"ebpf-repro"},"spec":{"ports":[{"port":8080,"targetPort":8080}],"selector":{"app":"mimir","role":"distributor"}}}
  name: mimir-distributor
  namespace: ebpf-repro
spec:
  - 172.20.46.228
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mimir
    role: distributor
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
