prd/repro/mimir-distributor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"mimir-distributor","namespace":"ebpf-repro"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mimir","role":"distributor"}},"template":{"metadata":{"labels":{"app":"mimir","role":"distributor"}},"spec":{"containers":[{"args":["-config.file=/etc/mimir/mimir.yaml","-target=distributor"],"image":"grafana/mimir:2.16.0","name":"mimir","ports":[{"containerPort":8080},{"containerPort":7946}],"resources":{"limit [...]
  name: mimir-distributor
  namespace: ebpf-repro
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mimir
      role: distributor
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mimir
        role: distributor
    spec:
      containers:
      - args:
        - -config.file=/etc/mimir/mimir.yaml
        - -target=distributor
        image: grafana/mimir:2.16.0
        imagePullPolicy: IfNotPresent
        name: mimir
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 7946
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/mimir
          name: config
        - mountPath: /data/mimir
          name: data
      dnsPolicy: ClusterFirst
      nodeSelector:
        eks.amazonaws.com/nodegroup: ebpf-repro-ng
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: mimir-config
        name: config
      - emptyDir: {}
        name: data
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-11T05:52:02Z"
    lastUpdateTime: "2026-05-11T06:15:25Z"
    message: ReplicaSet "mimir-distributor-5cb5b5745d" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  - lastTransitionTime: "2026-05-12T00:48:46Z"
    lastUpdateTime: "2026-05-12T00:48:46Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
