prd/repro/mimir-gossip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
  name: mimir-gossip
  namespace: ebpf-repro
spec:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: gossip
    port: 7946
    protocol: TCP
    targetPort: 7946
  selector:
    app: mimir
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
