prd/repro/mimir-ingester.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"mimir-ingester","namespace":"ebpf-repro"},"spec":{"replicas":4,"selector":{"matchLabels":{"app":"mimir","role":"ingester"}},"template":{"metadata":{"labels":{"app":"mimir","role":"ingester"}},"spec":{"containers":[{"args":["-config.file=/etc/mimir/mimir.yaml","-target=ingester","-memberlist.packet-dial-timeout=200ms","-memberlist.gossip-interval=200ms"],"image":"grafana/mimir:2.16.0","name":"mimir","ports":[{" [...]
  name: mimir-ingester
  namespace: ebpf-repro
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mimir
      role: ingester
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mimir
        role: ingester
    spec:
      containers:
      - args:
        - -config.file=/etc/mimir/mimir.yaml
        - -target=ingester
        - -memberlist.packet-dial-timeout=200ms
        - -memberlist.gossip-interval=200ms
        image: grafana/mimir:2.16.0
        imagePullPolicy: IfNotPresent
        name: mimir
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 7946
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/mimir
          name: config
        - mountPath: /data/mimir
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app: mimir
            role: ingester
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
      volumes:
      - configMap:
          defaultMode: 420
          name: mimir-config
        name: config
      - emptyDir: {}
        name: data
  availableReplicas: 4
  conditions:
  - lastTransitionTime: "2026-05-11T05:52:03Z"
    lastUpdateTime: "2026-05-11T06:08:14Z"
    message: ReplicaSet "mimir-ingester-b89d5889c" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  - lastTransitionTime: "2026-05-11T07:58:48Z"
    lastUpdateTime: "2026-05-11T07:58:48Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  observedGeneration: 2
  readyReplicas: 4
  replicas: 4
  updatedReplicas: 4
