prd/repro/telb-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"telb-simulator","namespace":"ebpf-repro"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"telb-simulator"}},"template":{"metadata":{"labels":{"app":"telb-simulator"}},"spec":{"containers":[{"command":["/bin/sh","-c","echo \"TELB Health Check Simulator started\"\nwhile true; do\n  # Loki 헬스체크 (TELB UA)\n  curl -s -o /dev/null -A \"TELB-HealthChecker/2.0\" \\\n    http://loki.ebpf-repro.svc:3100/ready\n\n [...]
  name: telb-simulator
  namespace: ebpf-repro
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: telb-simulator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: telb-simulator
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - |
          echo "TELB Health Check Simulator started"
          while true; do
            # Loki 헬스체크 (TELB UA)
            curl -s -o /dev/null -A "TELB-HealthChecker/2.0" \
              http://loki.ebpf-repro.svc:3100/ready

            # Mimir distributor 헬스체크 (TELB UA)
            curl -s -o /dev/null -A "TELB-HealthChecker/2.0" \
              http://mimir-distributor.ebpf-repro.svc:8080/ready

            # Prometheus 헬스체크 (TELB UA)
            curl -s -o /dev/null -A "TELB-HealthChecker/2.0" \
              http://prometheus.ebpf-repro.svc:9090/-/ready

            sleep 1
          done
        image: curlimages/curl:8.11.0
        imagePullPolicy: IfNotPresent
        name: telb
        resources:
          limits:
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        eks.amazonaws.com/nodegroup: ebpf-repro-ng
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-05-11T05:52:32Z"
    lastUpdateTime: "2026-05-11T06:15:29Z"
    message: ReplicaSet "telb-simulator-6b9cdf54bd" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  - lastTransitionTime: "2026-05-12T00:07:23Z"
    lastUpdateTime: "2026-05-12T00:07:23Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
